# flutter_vpn_engine

./: .editorconfig  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  MIGRATION.md  README.md  pubspec.yaml  settings.gradle  vpnclient_engine.mmd
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
.github/workflows/: build.yml  lint.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/click/vpnclient/engine/: VPNManager.kt
android/app/src/main/java/click/vpnclient/engine/service/: MainActivity.kt  VPNManager.kt  VPNService.kt
android/app/src/main/java/click/vpnclient/engine/service/ui/theme/: Color.kt  Theme.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/vpnclient-engine/: .gitignore  build.gradle
android/vpnclient-engine-example/: build.gradle
android/vpnclient-engine-example/src/androidTest/java/click/vpnclient/engine/example/: ExampleInstrumentedTest.java
android/vpnclient-engine-example/src/main/: AndroidManifest.xml
android/vpnclient-engine-example/src/main/java/click/vpnclient/engine/example/: MainActivity.java  VPNService.java
android/vpnclient-engine-example/src/main/res/layout/: activity_main.xml
android/vpnclient-engine-example/src/main/res/values/: strings.xml  themes.xml
android/vpnclient-engine-example/src/main/res/values-night/: themes.xml
android/vpnclient-engine-example/src/test/java/click/vpnclient/engine/example/: ExampleUnitTest.java
android/vpnclient-engine/src/androidTest/java/click/vpnclient/engine/: ExampleInstrumentedTest.java
android/vpnclient-engine/src/main/java/click/vpnclient/engine/: VpnClientEngine.java
android/vpnclient-engine/src/test/java/click/vpnclient/engine/: ExampleUnitTest.java
android_old/: build.gradle
android_old/app/src/test/java/click/vpnclient/engine/android/: ExampleUnitTest.kt
android_old/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/androidTest/java/click/vpnclient/engine/android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/click/vpnclient/engine/android/: MainActivity.kt
app/src/main/java/click/vpnclient/engine/android/ui/theme/: Type.kt
app/src/main/res/values/: strings.xml
example/: main.dart  pubspec.yaml
example/lib/: main.dart
include/: vpnclient_engine.h  vpnclient_engine_c_api.h
include/cores/: core_base.h  libxray_core.h  singbox_core.h  v2ray_core.h
include/drivers/: driver_base.h  hev_socks5_driver.h  tun2socks_driver.h
ios/: PackageTunnelProvider.entitlements  PacketTunnelProvider.swift
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
lib/: vpnclient_engine.dart
lib/src/: legacy_api.dart  subscription_manager.dart  v2ray_url_parser.dart  vpnclient_engine.dart
lib/src/models/: config.dart  connection_stats.dart  connection_status.dart  core_type.dart  driver_type.dart
lib/src/platform/: vpn_engine_platform.dart
linux/: CMakeLists.txt  vpnclient_engine_plugin.cc  vpnclient_engine_plugin.h
src/core/: vpnclient_engine.cpp  vpnclient_engine_c_api.cpp
src/cores/: core_base.cpp  libxray_core.cpp  singbox_core.cpp  v2ray_core.cpp
src/drivers/: driver_base.cpp  hev_socks5_driver.cpp  tun2socks_driver.cpp
src/engines/: singbox.cpp  wireguard.cpp
src/proxies/: tun2socks.cpp
test/: vpnclient_engine_test.dart
tests/: test_vpnclient_engine.cpp
windows/: CMakeLists.txt  vpnclient_engine_plugin.cpp  vpnclient_engine_plugin.h
